# trace

./: .gitignore  eslint.config.mjs  package-lock.json  package.json  pyproject.toml  vitest.config.ts
.openai/: hosting.json
app/: globals.css  layout.tsx  page.tsx
app/comparisons/: page.tsx
app/components/: app-shell.tsx  dashboard.tsx  new-analysis-dialog.tsx  placeholder-page.tsx  problem-detail.tsx
app/lib/: performance-data.ts  problem-status.ts
app/problems/: page.tsx
app/problems/[id]/: page.tsx
app/scenarios/: page.tsx
app/tests/: page.tsx
contracts/v1/common/: error.schema.json
contracts/v1/events/: event-envelope.schema.json
contracts/v1/examples/: error.invalid.json  event-envelope.valid.json
docs/superpowers/plans/: 2026-07-23-perfpilot-implementation-roadmap.md  2026-07-23-perfpilot-phase1-analysis-worker.md  2026-07-23-perfpilot-phase1-control-plane.md  2026-07-23-perfpilot-phase1-device-agent.md  2026-07-23-perfpilot-phase1-web-acceptance.md  2026-07-23-perfpilot-phase2-local-runtime.md  2026-07-23-perfpilot-phase3-trace-upload.md
docs/superpowers/specs/: 2026-07-23-perfpilot-production-platform-design.md
services/api/: pyproject.toml
services/api/tests/: conftest.py
services/api/tests/contract/: test_contract_examples.py
tests/: design-system.test.ts  new-analysis-dialog.test.tsx  problem-detail-contract.test.ts  rendered-html.test.mjs
